--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,20 @@ html {
 }
 
 body {
-  font-family: Baskervville, serif;
+  font-family: 'Baskervville', serif;
   color: linen;
-  background-color: rgb(20,30, 40);
+  background-color: rgb(20, 30, 40);
+}
+
+h1 {
+  font-family: 'Anton', sans-serif;
+}
+
+h2, h3, h4, h5, h6 {
+  font-family: 'Raleway', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: linen;
 }
