--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-*, ::before, ::after {
+*,
+::before,
+::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -36,6 +38,7 @@ main {
 .heading {
   grid-column: 2 / 3;
   display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .text {
