--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,13 @@ img {
   color: orangered;
   text-align: center;
 }
+
+.author {
+  font-size: 2rem;
+  font-family: "Raleway", sans-serif;
+}
+
+.author-name a:hover {
+  background-color: #306203;
+  a: author-name;
+}
