--- a/styles.css
+++ b/styles.css
@@ -75,5 +75,13 @@ img {
 
 .author-name a:hover {
   background-color: #306203;
-  a: author-name;
+}
+
+.publish-date {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.social-icons {
+  display: grid;
+  font-size: 3rem;
 }
