--- a/styles.css
+++ b/styles.css
@@ -84,5 +84,7 @@ img {
 .social-icons {
   display: grid;
   font-size: 3rem;
+  grid-template-columns: repeat(5, 1fr);
   grid-auto-flow: column;
+  grid-auto-columns: 1fr;
 }
