--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,8 @@ img {
 
 .text {
   grid-column: 2 / 3;
+  font-size: 1.8rem;
+  letter-spacing: 0.6px;
 }
 
 .hero {
@@ -87,4 +89,5 @@ img {
   grid-template-columns: repeat(5, 1fr);
   grid-auto-flow: column;
   grid-auto-columns: 1fr;
+  align-items: center;
 }
