--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,8 @@ img {
   grid-column: 2 / 3;
   font-size: 1.8rem;
   letter-spacing: 0.6px;
+  column-width: 25rem;
+  text-align: justify;
 }
 
 .hero {
@@ -90,4 +92,9 @@ img {
   grid-auto-flow: column;
   grid-auto-columns: 1fr;
   align-items: center;
+}
+
+.first-paragraph::first-letter {
+  font-size: 6rem;
+  color: orangered;
 }
