--- a/styles.css
+++ b/styles.css
@@ -105,3 +105,18 @@ hr {
   float: left;
   margin-right: 1rem;
 }
+
+.quote {
+  color: #00beef;
+  font-size: 2.4rem;
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+}
+
+.quote::before {
+  content: '" ';
+}
+
+.quote::after {
+  content: ' "';
+}
