--- a/styles.css
+++ b/styles.css
@@ -145,4 +145,6 @@ hr {
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: repeat(3, min-content);
+  gap: 2rem;
+  place-items: center;
 }
