--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,13 @@ hr {
 }
 
 @media only screen and (max-width: 720px) {
-.image-wrapper {
+  .image-wrapper {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .text-with-images {
     grid-template-columns: 1fr;
   }
 }
