--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ hr {
   .hero-subtitle, .author, .quote, .list-title {
     font-size: 1.8rem;
   }
-  .social {
+  .social-icons {
     font-size: 2rem;
   }
   .text {
