--- a/styles.css
+++ b/styles.css
@@ -169,13 +169,25 @@ hr {
   .hero-title {
     font-size: 6rem;
   }
-  .hero-subtitle, .author, .quote, .list-title {
+  
+  .hero-subtitle,
+  .author,
+  .quote,
+  .list-title {
     font-size: 1.8rem;
   }
+  
   .social-icons {
     font-size: 2rem;
   }
+
   .text {
     font-size: 1.6rem;
+  } 
+}
+
+@media only screen and (max-width: 420px) {
+  .hero-title {
+    font-size: 4.5rem;
   }
 }
